--- a/pomodoro-timer/src/styles/globals.css
+++ b/pomodoro-timer/src/styles/globals.css
@@ -7,8 +7,36 @@
 }
 
 body {
+  background-color: #1e213f;
   font-family: "Roboto", sans-serif;
   min-height: 100vh;
   margin: 0;
   padding: 0;
+}
+
+.button {
+  border-radius: 50%;
+  box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),
+    0px 15px 22px 2px rgba(0, 0, 0, 0.14), 0px 6px 28px 5px rgba(0, 0, 0, 0.12);
+  color: #e53935;
+  font-size: 28px;
+  height: 35px;
+  margin: 8px;
+  max-width: 35px;
+  min-width: 35px;
+}
+
+.button--large {
+  position: absolute;
+  bottom: 0;
+  background-color: #fff;
+  font-size: 35px;
+  height: 45px;
+  max-width: 45px;
+  min-width: 45px;
+  z-index: 1;
+}
+
+.button--large:hover {
+  background-color: #fff;
 }
