--- a/pomodoro-timer/src/styles/Button.module.scss
+++ b/pomodoro-timer/src/styles/Button.module.scss
@@ -1,8 +1,8 @@
 .button {
   border: none;
   border-radius: 50%;
-  box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),
-    0px 15px 22px 2px rgba(0, 0, 0, 0.14), 0px 6px 28px 5px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 4px -2px rgba(0, 0, 0, 0.2),
+    0px 7px 9px 1px rgba(0, 0, 0, 0.14), 0px 2px 12px 2px rgba(0, 0, 0, 0.12);
   color: #e53935;
   cursor: pointer;
   font-size: 28px;
@@ -13,13 +13,16 @@
   &--large {
     @extend .button;
     background-color: #fff;
+    box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),
+      0px 15px 22px 2px rgba(0, 0, 0, 0.14),
+      0px 6px 28px 5px rgba(0, 0, 0, 0.12);
     font-size: 35px;
     height: 45px;
     width: 45px;
   }
 
   &:disabled {
-    color: gray;
+    color: #808080;
     cursor: default;
   }
 }
